--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.4.0",
         "@popperjs/core": "^2.11.6",
+        "@tomtom-international/web-sdk-maps": "^6.23.0",
+        "@tomtom-international/web-sdk-services": "^6.23.0",
         "bootstrap": "^5.3.0"
     }
 }
