--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@tomtom-international/web-sdk-maps": "^6.23.0",
         "@tomtom-international/web-sdk-plugin-searchbox": "^3.2.0",
         "@tomtom-international/web-sdk-services": "^6.23.0",
-        "bootstrap": "^5.3.0"
+        "bootstrap": "^5.3.0",
+        "chart.js": "^4.3.0"
     }
 }
